--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 	<div class="mountain">What wonderous worlds will we build?</div>
 	<main class="text">
 	
-	 <p>My name is Joseph Harskamp, though my friends just call me Joe. I reside in Northern Virginia with my wife and dog, though I grew up on a farm in Northwest Iowa.<br> I learned a lot there, like the value of a solid work ethic, honesty, and respect. Those values stayed with me, and are part and parcel to who I am. I enjoy tinkering with stuff, whether it's an old car, or a website, or some old gadget I've found, my curiousity is what fuels my passion. I love taking things apart, examining their insides, and reassembling them to work better than they did before.</p>
-     <p>I love learning and growing in every aspect of my life. I enjoy hiking, video games, craft beer, board games, and of course, programming. </p>
+	<p>My name is Joseph Harskamp, though my friends just call me Joe. I grew up on a farm in Northwest Iowa, but currently live in Northern Virginia with my wife and dog.<br> I learned a lot living on a farm, like the value of a solid work ethic, honesty, and respect. Those values stayed with me, and are part and parcel of who I am. I enjoy tinkering with things, whether it's an old car, a website, or some old gadget I've found, my curiosity is what fuels my passion. I love to take things apart, examine their inner workings, and reassemble them to a state better than before.</p>
+    <p>I love learning and growing in every aspect of my life. I enjoy hiking, video games, craft beer, board games, and of course, programming.</p>
 	</main>
 
 	<footer class="text">
