--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
 				 March 8 2017
 				 My personal Page
 		 -->
+		 <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Lobster|Roboto|Yellowtail" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>Contact Information</title>
 </head>
@@ -19,9 +20,14 @@
 	<nav>
 		<ul>
 			<li><a href="index.html">Home</a></li>
-			<li><a href="work.html">Work</a></li>
+			<li><a href="work.html">About Me</a></li>
 			<li><a href="contact.html">Contact</a></li>
 		</ul>
 	</nav>
+	<img src="assets/linkdin.png">
+	<main>
+		
+
+	</main>
 </body>
 </html>
