--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		 March 8 2017
 		 My personal Page
 	 -->
+	 <link href="https://fonts.googleapis.com/css?family=Droid+Sans|Amatic+SC|Lobster|Roboto|Yellowtail" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>Joseph Harskamp</title>
 </head>
@@ -18,17 +19,14 @@
 	<nav>
 		<ul>
 			<li><a href="index.html">Home</a></li>
-			<li><a href="work.html">Work</a></li>
+			<li><a href="work.html">About Me</a></li>
 			<li><a href="contact.html">Contact</a></li>
 		</ul>
 	</nav>
 	<div class="mountain">What wonderous worlds will we build?</div>
-	<main class="text">
+	<h1>Who knows?</h1>
+	<h1>Let's find out.</h1>
 	
-	<p>My name is Joseph Harskamp, though my friends just call me Joe. I grew up on a farm in Northwest Iowa, but currently live in Northern Virginia with my wife and dog.<br> I learned a lot living on a farm, like the value of a solid work ethic, honesty, and respect. Those values stayed with me, and are part and parcel of who I am. I enjoy tinkering with things, whether it's an old car, a website, or some old gadget I've found, my curiosity is what fuels my passion. I love to take things apart, examine their inner workings, and reassemble them to a state better than before.</p>
-    <p>I love learning and growing in every aspect of my life. I enjoy hiking, video games, craft beer, board games, and of course, programming.</p>
-	</main>
-
 	<footer class="text">
 	<small>
 		<p>Joseph Harskamp</p>
