--- a/contact.html
+++ b/contact.html
@@ -1,33 +1,74 @@
 <!DOCTYPE html>
 <html>
 <head>
-		<!-- Joseph Harskamp
-				 March 8 2017
-				 My personal Page
-		 -->
-		 <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Lobster|Roboto|Yellowtail" rel="stylesheet">
+	<!-- Joseph Harskamp
+		 March 8 2017
+		 My personal Page
+	 -->
+	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script>
+$(document).ready(function(){
+	$('#header1').animate({'opacity':'1'},1000);
+	$('#header2').animate({'opacity':'1'},3000);
+	$('#nav').animate({'opacity':'1'},4000);
+	$('.mountain').animate({'opacity':'1'},1000);
+
+	$(function(){
+	$('li').hover(function(){
+	    $(this).animate({'z-index':'1','font-size':'2em'},50);
+	      },
+	      function(){
+	      $(this).animate({'z-index':'0','font-size':'1.6em'},50);
+	    });
+	});
+
+
+    $(window).scroll(function(){
+    	$('.hidden').each(function(i){
+    		var bottom_of_object = $(this).offset().top + $(this).outerHeight();
+    		var bottom_of_window = $(window).scrollTop() + $(window).height();
+
+    		if (bottom_of_window > bottom_of_object){
+    			$(this).animate({'opacity':'1'},1000);
+    		}
+    	});
+    });
+
+
+});
+</script>
+	 <link href="https://fonts.googleapis.com/css?family=Droid+Sans|Amatic+SC|Lobster|Roboto|Yellowtail" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<title>Contact Information</title>
+	<title>Joseph Harskamp</title>
 </head>
 <body>
 
 	<header>
-		<h1>Joseph Harskamp</h1>
-		<h2>Professional Web Developer</h2>
-
+		<h1 id="header1" class="fadein">Joseph Harskamp</h1>
+		<h2 id="header2" class="fadein">Professional Web Developer</h2>
 	</header>
 
-	<nav>
+	<nav class="fadein" id="nav">
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="work.html">About Me</a></li>
 			<li><a href="contact.html">Contact</a></li>
 		</ul>
 	</nav>
-	<img src="assets/linkdin.png">
-	<main>
-		
-
+	<h2>Get to know Joe</h3>
+	<main id="contactinfo">
+		<figure>
+			<a href="https://www.linkedin.com/in/joseph-harskamp/"><img src="assets/linkdin.png"><figcaption>Linkedin</figcaption></a>
+			<a href="https://github.com/jeh26033"><img src="assets/github-icon.png"><figcaption>Github</figcaption></a>
+			<a href="mailto:joe.harskamp@gmail.com" target="_top"><img src="assets/gmail.ico"><figcaption>Send me an Email</figcaption></a>
+		</figure>
 	</main>
+
+	<footer class="text">
+		<small>
+			<p>Joseph Harskamp</p>
+			<p>2017</p>
+		</small>
+	</footer>
 </body>
 </html>
