--- a/index.html
+++ b/index.html
@@ -1,10 +1,44 @@
 <!DOCTYPE html>
 <html>
 <head>
+
 	<!-- Joseph Harskamp
 		 March 8 2017
 		 My personal Page
 	 -->
+	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script>
+$(document).ready(function(){
+	$('#header1').animate({'opacity':'1'},1000);
+	$('#header2').animate({'opacity':'1'},3000);
+	$('#nav').animate({'opacity':'1'},4000);
+	$('.mountain').animate({'opacity':'1'},1000);
+
+
+	$(function(){
+		$('li').hover(function(){
+		    $(this).animate({'z-index':'1','font-size':'2em'},50);
+		      },
+		      function(){
+		      $(this).animate({'z-index':'0','font-size':'1.6em'},50);
+		    });
+		});
+	
+
+    $(window).scroll(function(){
+    	$('.hidden').each(function(i){
+    		var bottom_of_object = $(this).offset().top + $(this).outerHeight();
+    		var bottom_of_window = $(window).scrollTop() + $(window).height();
+
+    		if (bottom_of_window > bottom_of_object){
+    			$(this).animate({'opacity':'1'},1000);
+    		}
+    	});
+    });
+
+
+});
+</script>
 	 <link href="https://fonts.googleapis.com/css?family=Droid+Sans|Amatic+SC|Lobster|Roboto|Yellowtail" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>Joseph Harskamp</title>
@@ -12,20 +46,21 @@
 <body>
 
 	<header>
-		<h1>Joseph Harskamp</h1>
-		<h2>Professional Web Developer</h2>
+		<h1 id="header1" class="fadein">Joseph Harskamp</h1>
+		<h2 id="header2" class="fadein">Professional Web Developer</h2>
 	</header>
 
-	<nav>
+	<nav class="fadein" id="nav">
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="work.html">About Me</a></li>
 			<li><a href="contact.html">Contact</a></li>
 		</ul>
 	</nav>
-	<div class="mountain">What wonderous worlds will we build?</div>
-	<h1>Who knows?</h1>
-	<h1>Let's find out.</h1>
+	<div class="mountain fadein "><div>What wonderous worlds will we build?</div></div>
+	<br>
+	<h1 class="hidden" id="whoknows">Who knows?</h1>
+	<h1 class="hidden" id="findout">Let's find out.</h1>
 	
 	<footer class="text">
 	<small>
